[package]
name = "cruxmont"
version = "0.1.3"
edition = "2024"
description = "A web framework for DB transactions, HTTP handling, and testing utilities"
license = "MIT"
repository = "https://github.com/maxwellflitton/cruxmont"
homepage = "https://github.com/maxwellflitton/cruxmont"
documentation = "https://docs.rs/cruxmont"
readme = "../README.md"
keywords = ["web", "database", "transactions", "testing", "axum"]
categories = ["web-programming"]

[dependencies]
sqlx = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
postgresql_embedded = { workspace = true, optional = true }

cruxmont-db-tx = { version = "0.1.1" }
cruxmont-embedded-pg-test-macro = { version = "0.1.3", optional = true }
cruxmont-pg-pool-macro = { version = "0.1.1" }
cruxmont-pg-test-macro = { version = "0.1.3", optional = true }
cruxmont-http-tx = { version = "0.1.1" }
cruxmont-test-utils = { version = "0.1.1", optional = true }

[features]
test = ["cruxmont-test-utils", "cruxmont-pg-test-macro"]
embedded-pg = ["cruxmont-embedded-pg-test-macro", "postgresql_embedded"]
