[package]
name = "cruxmont-test-utils"
version = "0.1.1"
edition = "2024"
description = "test utils for Cruxmont web framework"
license = "MIT"
repository = "https://github.com/yourusername/cruxmont"
homepage = "https://github.com/yourusername/cruxmont"
documentation = "https://docs.rs/cruxmont-embedded-pg-test-macro"
keywords = ["database", "testing", "macro", "postgres", "cruxmont"]
categories = ["database"]

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
