[package]
name = "basic-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
cruxmont = { version = "0.1.0" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http-body-util = { workspace = true }

[dev-dependencies]
cruxmont = { version = "0.1.0", features = ["test", "embedded-pg"] }
