[package]
name = "cruxmont-db-tx"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for database transactions in the Cruxmont web framework"
license = "MIT"
repository = "https://github.com/yourusername/cruxmont"
homepage = "https://github.com/yourusername/cruxmont"
documentation = "https://docs.rs/cruxmont-db-tx"
keywords = ["database", "transactions", "macro", "cruxmont"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
