[package]
name = "cruxmont-embedded-pg-test-macro"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for embedded PostgreSQL testing in the Cruxmont web framework"
license = "MIT"
repository = "https://github.com/yourusername/cruxmont"
homepage = "https://github.com/yourusername/cruxmont"
documentation = "https://docs.rs/cruxmont-embedded-pg-test-macro"
keywords = ["database", "testing", "macro", "postgres", "cruxmont"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
uuid = { workspace = true }
