[package]
name = "cruxmont-http-tx"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for implementing http transactions"
license = "MIT"
repository = "https://github.com/yourusername/cruxmont"
homepage = "https://github.com/yourusername/cruxmont"
documentation = "https://docs.rs/cruxmont-embedded-pg-test-macro"
keywords = ["database", "testing", "macro", "postgres", "cruxmont"]
categories = ["web-programming::http-client"]

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
