[package]
name = "cruxmont-pg-pool-macro"
version = "0.1.0"
edition = "2024"
description = "Procedural macro for curxmont for creating porgres DB pools"
license = "MIT"
repository = "https://github.com/yourusername/cruxmont"
homepage = "https://github.com/yourusername/cruxmont"
documentation = "https://docs.rs/cruxmont-embedded-pg-test-macro"
keywords = ["database", "testing", "macro", "postgres", "cruxmont"]
categories = ["database", "development-tools::procedural-macro-tools"]

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
